--- a/app/src/main/resources/static/index.html
+++ b/app/src/main/resources/static/index.html
@@ -13,7 +13,7 @@
     </style>
   </head>
   <body>
-    <h1>강의관리시스템!</h1>
+    <h1>강의관리시스템! - 2</h1>
     <ul>
       <li><a href="student/index.html">학생관리</a></li>
       <li><a href="teacher/index.html">강사관리</a></li>
@@ -29,24 +29,24 @@
     </ul>
 
     <script>
-      fetch("auth/user")
+      fetch('auth/user')
         .then((response) => {
           return response.json();
         })
         .then((result) => {
-          if (result.status == "success") {
-            document.querySelector("#username").innerHTML = result.data.name;
-            document.querySelector(".logout").classList.remove("logout");
+          if (result.status == 'success') {
+            document.querySelector('#username').innerHTML = result.data.name;
+            document.querySelector('.logout').classList.remove('logout');
           } else {
-            document.querySelector(".login").classList.remove("login");
+            document.querySelector('.login').classList.remove('login');
           }
         })
         .catch((exception) => {
-          alert("로그인 사용자 정보 조회 오류!");
+          alert('로그인 사용자 정보 조회 오류!');
         });
 
       function logout() {
-        fetch("auth/logout")
+        fetch('auth/logout')
           .then((response) => {
             return response.json();
           })
